--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <link rel="stylesheet" type="text/css" media="all" href="static/css/scaffolding.css"/>
         <link rel="stylesheet" type="text/css" media="all" href="static/css/styles.css"/>
     </head>
-    <body>
-        <main id="main" class="main" role="main">
-            <h1 class="h-giga">Hello World!</h1>
-        </main>
+       <body>
+      <img id="circle" src="http://i.imgur.com/26wqIdf.png">
+      <p>Yo! My name is Melissa, and I live in Los Angeles. <p> I really like puppies. What's your favorite kind of puppy?</p>
+      <input type="email" placeholder="Puppy Type">
+      <input type="submit" value="tell me!">
     </body>
 </html>
